fix: align error message in search widget (Booking UI) (#769)

--- a/booking-ui/src/styles/Search.css
+++ b/booking-ui/src/styles/Search.css
@@ -184,6 +184,7 @@
     width: 100%;
     font-size: .875em;
     color: #dc3545;
+    margin-left: -2em;
 }
 
 .space-list.maximized {
